modificacion enpoint para listar sin paginacion